// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellData functional tests lifecycle snapshots: 1. initial text tag 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <div
        class="css-16d5k2m-DataTag e1snbou80"
        id="t-B-2"
        tabindex="0"
      />
    </div>
  </td>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 2. initial input tag 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <input
        class="col-label-width row-label-height css-1adgg3x-Input ep2oxkq0"
        id="f-B-2"
        value=""
      />
    </div>
  </td>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 3. text tag has text 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <div
        class="css-1tbw9om-DataTag e1snbou80"
        id="t-B-2"
        tabindex="0"
      >
        9
      </div>
    </div>
  </td>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 4. input tag has formula 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <input
        class="col-label-width row-label-height css-1adgg3x-Input ep2oxkq0"
        id="f-B-2"
        value="=2+3+4"
      />
    </div>
  </td>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 5. cell value deleted with Backspace 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <div
        class="css-16d5k2m-DataTag e1snbou80"
        id="t-B-2"
        tabindex="0"
      />
    </div>
  </td>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 6. key down "a" on text tag 1`] = `
<DocumentFragment>
  <td>
    <div
      class="row-label-height col-label-width css-1wpoxe-Wrapper e17nyd4f0"
    >
      <input
        class="col-label-width row-label-height css-1adgg3x-Input ep2oxkq0"
        id="f-B-2"
        value=""
      />
    </div>
  </td>
</DocumentFragment>
`;
